--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta
+  name="viewport"
+  content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hacker News Front Page</title>
+  <link
+  rel="stylesheet"
+  href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
+/>
+  
+  <title>Akintunde Jegede</title>
 </head>
 <body>
   <div id="content"></div>
